--- a/app/views/works/show.html.haml
+++ b/app/views/works/show.html.haml
@@ -6,3 +6,6 @@
  %br
  =@work.description
  %br
+ =link_to 'Edit books details',  edit_work_path(@work)
+ %br
+ =link_to 'Back to top page', works_path
