--- a/app/views/works/_form.html.haml
+++ b/app/views/works/_form.html.haml
@@ -1,4 +1,8 @@
 =bootstrap_form_with model: @work, local: true do |f|
   =f.text_field :title
-  =f.text_field :author
+  =f.collection_select :author_id, Author.all, :id, :name, include_blank: true, class: 'form-control '
+  =f.text_field :release
+  =f.text_field :description
   =f.submit
+
+=link_to "back to work lists", works_path
